# jpipe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  performance.md
.github/codeql/: codeql-config.yml
.github/workflows/: cmake.yml
bench/: CMakeLists.txt  json.c  json_encoding.c  queue.c
bench/include/: jp_bench.h
bench/lib/: bench.c
cmake/: compatibility.cmake  compilers.cmake  quality.cmake  sanitizers.cmake
compile-farm/: debian_gcc10.Dockerfile  debian_gcc11.Dockerfile  debian_gcc12.Dockerfile  debian_gcc13.Dockerfile  ubuntu_gcc10.Dockerfile  ubuntu_gcc11.Dockerfile  ubuntu_gcc12.Dockerfile  ubuntu_gcc13.Dockerfile
cppcheck/: .cppcheck_suppressions  cppcheck.cfg.xml
include/: j_common.h  j_errno.h  j_options.h  jp_command.h  jp_common.h  jp_config.h.in  jp_encoder.h  jp_errno.h  jp_field.h  jp_file.h  jp_json.h  jp_memory.h  jp_poller.h  jp_queue.h  jp_reader.h  jp_worker.h  jp_writer.h
scripts/: data-generator.js
src/: CMakeLists.txt  command.c  config.c  errno.c  field.c  file.c  json.c  main.c  memory.c  options.c  queue.c  reader.c  worker.c  writer.c
src/poller/: epoll.c  kqueue.c
test/: CMakeLists.txt
test/data/: global_help_command.tmpl  help_command_out.tmpl  run_help_command_out.tmpl  version_command_out.tmpl
test/include/: jp_test.h
test/lib/: jp_test.c  jp_test.h  test.c
test/stress/: jp_queue_test.c  jp_reader_test.c  jp_writer_test.c  queue.test.c
test/unit/: j_options_test.c  jp_command.test.c  jp_command_test.c  jp_field.test.c  jp_field_test.c  jp_json_test.c  jp_queue_test.c  jp_reader_test.c  jp_worker.test.c  jp_worker_test.c  jp_writer_test.c  queue.test.c
